<resources>
    <string name="app_name">2ndTask</string>
    <string name="tax_calc">Tax Calc</string>
    <string name="ugoki_skt"><![CDATA[> Ugoki, SKT]]></string>
    <string name="pre_tax">PRE TAX</string>
    <string name="_120_2_240">120*2=240</string>
    <string name="div">/</string>
    <string name="ac">AC</string>
    <string name="p">+-</string>
    <string name="prcnt">%</string>
    <string name="eql">=</string>
    <string name="pnt">.</string>
    <string name="_0">0</string>
    <string name="pls">+</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="min">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="mul">x</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="setting">SETTING</string>
</resources>